# rt-test

./: Cargo.toml  README.md
src/: atm.rs  client.rs  main.rs
test_files/: dispute_deposit.in  dispute_deposit.out  dispute_withdrawal.in  dispute_withdrawal.out  ignore.in  precision.in  precision.out
