[package]
name = "rt-test"
version = "0.1.0"
authors = ["Jonas Hietala <mail@jonashietala.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
rust_decimal = "1.14"
anyhow = "1.0"
glob = "0.3.0"
